nginx web deploy/serviceandingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx-alt
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
  #   protocol: TCP  # optional protocol
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Frame-Options: Deny";
      more_set_headers "X-Xss-Protection: 1; mode=block";
      more_set_headers "X-Content-Type-Options: nosniff";
  name: nginx
  namespace: nginx-alt
spec:
  rules:
    - host: search.flakie.org
      http:
        paths:
        - backend:
            service:
              name: nginx
              port:
                number: 80
          path: /
          pathType: ImplementationSpecific
